--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -56,7 +56,10 @@
             </div>
             <div class="about-image">
                 <div class="image-placeholder">
-                    <i class="fas fa-tools"></i>
+                    <video width="1280" height="720" controls>
+                        <source src="static/img/video-tec.mp4" type="video/mp4">
+                        Seu navegador não suporta a tag de vídeo HTML5.
+                      </video>
                 </div>
             </div>
         </div>
