--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -56,7 +56,7 @@
             </div>
             <div class="about-image">
                 <div class="image-placeholder">
-                    <video autoplay muted loop playsinline style="width:200; height:auto;">
+                    <video autoplay muted loop playsinline style="width:560; height:315;">
                         <source src="static/img/video-tec.mp4" type="video/mp4">
                         Seu navegador não suporta a tag de vídeo HTML5.
                       </video>
