--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -56,10 +56,10 @@
             </div>
             <div class="about-image">
                 <div class="image-placeholder">
-                    <video autoplay muted loop playsinline style="width:560; height:315;">
-                        <source src="static/img/video-tec.mp4" type="video/mp4">
+                    <video autoplay muted loop playsinline>
+                        <source src="{{ url_for('static', filename='img/video-tec.mp4') }}" type="video/mp4">
                         Seu navegador não suporta a tag de vídeo HTML5.
-                      </video>
+                    </video>
                 </div>
             </div>
         </div>
