--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -56,7 +56,7 @@
             </div>
             <div class="about-image">
                 <div class="image-placeholder">
-                    <video autoplay muted loop playsinline>
+                    <video autoplay muted loop playsinline controlslist="nodownload nofullscreen noremoteplayback" disablePictureInPicture disableRemotePlayback>
                         <source src="{{ url_for('static', filename='img/video-tec.mp4') }}" type="video/mp4">
                         Seu navegador não suporta a tag de vídeo HTML5.
                     </video>
