--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                 <li><a href="{{ url_for('index') }}" class="nav-link">Home</a></li>
                 <li><a href="{{ url_for('sobre') }}" class="nav-link">Sobre</a></li>
                 <li class="nav-dropdown">
-                    <a href="{{ url_for('servicos') }}" class="nav-link">
+                    <a href="{% if primeira_pagina_servico_slug %}{{ url_for('pagina_servico', slug=primeira_pagina_servico_slug) }}{% else %}{{ url_for('index') }}{% endif %}" class="nav-link">
                         Serviços <i class="fas fa-chevron-down"></i>
                     </a>
                     <ul class="dropdown-menu">
@@ -134,7 +134,7 @@
                     <ul>
                         <li><a href="{{ url_for('index') }}">Home</a></li>
                         <li><a href="{{ url_for('sobre') }}">Sobre Nós</a></li>
-                        <li><a href="{{ url_for('servicos') }}">Serviços</a></li>
+                        <li><a href="{% if primeira_pagina_servico_slug %}{{ url_for('pagina_servico', slug=primeira_pagina_servico_slug) }}{% else %}{{ url_for('index') }}{% endif %}">Serviços</a></li>
                         <li><a href="{{ url_for('rastrear') }}">Acompanhar Conserto</a></li>
                         <li><a href="{{ url_for('contato') }}">Contato</a></li>
                         <li><a href="{{ url_for('client_login') }}">Área do Cliente</a></li>
@@ -143,17 +143,21 @@
                 <div class="footer-section">
                     <h4>Serviços</h4>
                     <ul>
-                        {% if servicos_footer %}
-                            {% for servico in servicos_footer[:5] %}
-                            <li><a href="{{ url_for('servicos') }}">{{ servico.nome }}</a></li>
+                        {% if paginas_servicos_menu %}
+                            {% for pagina in paginas_servicos_menu[:5] %}
+                            <li><a href="{{ url_for('pagina_servico', slug=pagina.slug) }}">{{ pagina.titulo }}</a></li>
                             {% endfor %}
-                            {% if servicos_footer|length > 5 %}
-                            <li><a href="{{ url_for('servicos') }}">Ver todos os serviços...</a></li>
+                            {% if paginas_servicos_menu|length > 5 %}
+                            <li><a href="{% if primeira_pagina_servico_slug %}{{ url_for('pagina_servico', slug=primeira_pagina_servico_slug) }}{% else %}{{ url_for('index') }}{% endif %}">Ver todos os serviços...</a></li>
                             {% endif %}
+                        {% elif servicos_footer %}
+                            {% for servico in servicos_footer[:5] %}
+                            <li><a href="{% if primeira_pagina_servico_slug %}{{ url_for('pagina_servico', slug=primeira_pagina_servico_slug) }}{% else %}{{ url_for('index') }}{% endif %}">{{ servico.nome }}</a></li>
+                            {% endfor %}
                         {% else %}
-                            <li><a href="{{ url_for('servicos') }}">Reparo de Celulares</a></li>
-                            <li><a href="{{ url_for('servicos') }}">Eletrodomésticos</a></li>
-                            <li><a href="{{ url_for('servicos') }}">Computadores e Notebook</a></li>
+                            <li><a href="{% if primeira_pagina_servico_slug %}{{ url_for('pagina_servico', slug=primeira_pagina_servico_slug) }}{% else %}{{ url_for('index') }}{% endif %}">Reparo de Celulares</a></li>
+                            <li><a href="{% if primeira_pagina_servico_slug %}{{ url_for('pagina_servico', slug=primeira_pagina_servico_slug) }}{% else %}{{ url_for('index') }}{% endif %}">Eletrodomésticos</a></li>
+                            <li><a href="{% if primeira_pagina_servico_slug %}{{ url_for('pagina_servico', slug=primeira_pagina_servico_slug) }}{% else %}{{ url_for('index') }}{% endif %}">Computadores e Notebook</a></li>
                         {% endif %}
                     </ul>
                 </div>
